--- a/login.html
+++ b/login.html
@@ -85,7 +85,7 @@
             </div>
         </form>
         <div class="signup-link">
-            <p>Don't have an account? <a href="/signup">Sign up here</a></p>
+            <p>Don't have an account? <a href="signinpage.html">Sign up here</a></p>
         </div>
     </div>
 </body>
