--- a/signinpage.html
+++ b/signinpage.html
@@ -85,7 +85,7 @@
                 <button type="submit">Sign In</button>
             </div>
 			<div class="signup-link">
-                <p>Already have an account? <a href="/login">Log in here</a></p>
+                <p>Already have an account? <a href="login.html">Log in here</a></p>
             </div>
         </form>
     </div>
